[tool.poetry]
name = "pypaper"
version = "0.1.0"
description = ""
authors = ["Pachwenko <pmccart4096@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6,<3.10"
PyQt5 = "^5.12.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
pyinstaller = "^4.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
